<resources>
    <string name="app_name">yorumluYORUM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Almak istediğin ürünle ilgili aklında sorular mı var? \n Seni kaydolmaya bekliyoruz.</string>
    <string name="hesabinVarmi">Hali hazırda bir hesabın varsa giriş yap özletme</string>
    <string name="connect_with_each_other">Connect with each other</string>
    <string name="enjoy_safe_and_private_texting">Enjoy safe and private texting</string>
    <string name="sign_up">Kaydol</string>
    <string name="log_in">Giriş Yap</string>
    <string name="intro_vector">Intro Vector</string>
    <string name="you_can_connect_with">You can connect with</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="log_in_vector">Log in vector</string>
    <string name="sign_up_vector">Sign up vector</string>
    <string name="full_name">Tam Ad</string>
    <string name="confirm_password">Şifreyi Tekrar Girelim</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="bio">Hakkında</string>
    <string name="webclient_id">334891263173-vjui4vrmnd286d1qq27ab8e3ki62m45i.apps.googleusercontent.com</string>
</resources>