<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splashback"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/intro_vector"/>


    <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login2"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/log_in"
            android:textColor="#173428"
            android:textStyle="bold"
            android:backgroundTint="@color/yaziRenk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="#173428"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/yaziRenk"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="617dp" />



        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_mainActivity"
            style="?android:attr/progressBarStyle"
            android:theme="@style/blackProgressBar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
